feat: first new version of personal site package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 7.1.2
 Imports:
-  shiny,
-  shinyjs,
-  imola,
-  shinyMobile
+    shiny,
+    shinyjs,
+    imola,
+    shinyMobile,
+    pkgload
